--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".nonAerobicExercise" />
 
         <activity android:name=".AerobicExercise" />
+        <activity android:name=".AdminUserHistory"/>
 
 
 
